add settings to own tab

--- a/web/templates/navbar.handlebars
+++ b/web/templates/navbar.handlebars
@@ -19,7 +19,7 @@
                     <a href="edit.html">Light Schedule</a>
                 </li>
                 <li class="{{#if settings}}active{{/if}}">
-                    <a href="#">Settings</a>
+                    <a href="settings.html">Settings</a>
                 </li>
                 <li class="{{#if preview}}active{{/if}}">
                     <a href="preview.html">Preview</a>
