navbar active working condensed the progress bars some

--- a/web/templates/channel-status.handlebars
+++ b/web/templates/channel-status.handlebars
@@ -1,12 +1,8 @@
 <div id="channel_{{c_id}}" class="row">
-    <div class="channel-id col-4">
-        <b>Channel {{c_id}}</b> {{cur}}/{{sleepTime}}/{{goal}}</span>
-    </div>
-    <div class="col-8">
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{percent}}" aria-valuemin="0" aria-valuemax="100" style="width:{{percent}}%">
-                <span class="progress-text">{{percent}}%</span>
-            </div>
+    <span class="channel-id col-xs-4"><b>Channel {{c_id}}</b> {{cur}}/{{sleepTime}}/{{goal}}</span>
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{percent}}" aria-valuemin="0" aria-valuemax="100" style="width:{{percent}}%">
+            <span class="progress-text">{{percent}}%</span>
         </div>
     </div>
 </div>
