--- a/web/templates/navbar.handlebars
+++ b/web/templates/navbar.handlebars
@@ -8,11 +8,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Whet</a>
+            <a class="navbar-brand" href="#">whet</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="{{#if home}}active{{/if}}">
+                <li class="{{#if index}}active{{/if}}">
                     <a href="index.html">Home</a>
                 </li>
                 <li class="{{#if edit}}active{{/if}}">
