Restart threads if they die, which should never happen.

--- a/web/templates/ws-messages.handlebars
+++ b/web/templates/ws-messages.handlebars
@@ -4,7 +4,7 @@
             <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
 
             <form id="chatform">
-                <input id="text" type="text" class="form-control" />
+                <input id="text" type="textarea" class="form-control" wrap="soft" />
                 <input type="submit" class="form-control" />
             </form>
         </div>
