--- a/web/css/whet.css
+++ b/web/css/whet.css
@@ -2,14 +2,24 @@
 
 .progress {
   position: relative;
+  background-color: rgb(179, 179, 179);
 }
 
 .progress-bar-title {
   position: absolute;
   text-align: right;
   overflow: hidden;
-  color: rgb(54, 54, 54);
+  color: rgb(255, 255, 255);
   right: 0;
   left: 0;
   top: 0;
+}
+
+.right-title {
+  text-align: right;
+  right: 5;
+}
+.left-title {
+  text-align: left;
+  left: 5;
 }
