--- a/web/templates/navbar.handlebars
+++ b/web/templates/navbar.handlebars
@@ -13,7 +13,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="{{#if index}}active{{/if}}">
-                    <a href="index.html">Home</a>
+                    <a href="/web">Home</a>
                 </li>
                 <li class="{{#if edit}}active{{/if}}">
                     <a href="edit.html">Light Schedule</a>
