New UI for outlet

--- a/web/templates/navbar.handlebars
+++ b/web/templates/navbar.handlebars
@@ -24,6 +24,9 @@
                 <li class="{{#if preview}}active{{/if}}">
                     <a href="preview.html">Preview</a>
                 </li>
+                <li class="{{#if outlet}}active{{/if}}">
+                    <a href="outlet.html">Outlet</a>
+                </li>
             </ul>
         </div>
         <!--/.nav-collapse -->
