--- a/web/templates/outlet-status.handlebars
+++ b/web/templates/outlet-status.handlebars
@@ -1,9 +1,4 @@
-<div id="channel_{{c_id}}">
+<div id="outlet_status_{{c_id}}">
     <div class="col-xs-1">{{c_id}}</div>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{percent}}" aria-valuemin="0" aria-valuemax="100" style="width:{{percent}}%">
-        </div>
-        <div class="progress-bar-title left-title">{{percent}}%</div>
-        <div class="progress-bar-title right-title">{{cur}}/{{sleepTime}}/{{goal}}</div>
-    </div>
+
 </div>
