trying to get outlet statuses in webview

--- a/web/templates/outlet-status.handlebars
+++ b/web/templates/outlet-status.handlebars
@@ -1,4 +1,3 @@
-<div id="outlet_status_{{c_id}}">
-    <div class="col-xs-1">{{c_id}}</div>
-
+<div id="outlet-statuses">
+    <div>{{outlet_status}}</div>
 </div>
