small fixes before i forget

--- a/web/templates/outlet-status.handlebars
+++ b/web/templates/outlet-status.handlebars
@@ -1,4 +1,4 @@
-<div id="outlet_status_{{id}}" class="col-md-3 border">
+<div id="outlet_status_{{id}}" class="col-md-3">
         <div class="col-xs-5">{{id}}:{{name}}</div>
         <div class="col-xs-7">
             <label class="switch">
