--- a/web/templates/ws-messages.handlebars
+++ b/web/templates/ws-messages.handlebars
@@ -1,4 +1,4 @@
-        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#log-view">ws logs</button>
+        <button type="button" class="btn" data-toggle="collapse" data-target="#log-view">ws logs</button>
         <div id="log-view" class="form-group collapse">
             <h3>Log</h3>
             <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
