--- a/web/templates/outlet-status.handlebars
+++ b/web/templates/outlet-status.handlebars
@@ -1,10 +1,7 @@
-<div id="outlet_status_{{id}}" class="col-md-3">
-        <div class="col-xs-5">{{id}}:{{name}}</div>
-        <div class="col-xs-7">
+<div id="outlet_status_{{id}}" class="col-xs-6 col-md-3">
             <label class="switch">
                 <input type="checkbox"{{#if active_event}} checked='checked'{{/if}} disabled=true>
-                <span class="slider"></span>
+                <span class="slider">{{id}}:{{name}}</span>
             </label>
-        </div>
 
 </div>
