alias for channels

--- a/web/templates/channel-status.handlebars
+++ b/web/templates/channel-status.handlebars
@@ -2,7 +2,7 @@
     <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="{{percent}}" aria-valuemin="0" aria-valuemax="100" style="width:{{percent}}%">
         </div>
-        <div class="progress-bar-title left-title">{{c_id}} - {{percent}}%</div>
+        <div class="progress-bar-title left-title">{{c_id}} {{alias}} - {{percent}}%</div>
         <div class="progress-bar-title right-title">{{cur}}/{{sleepTime}}/{{goal}}</div>
     </div>
 </div>
